fixed gap

--- a/desktop15/desktop15.css
+++ b/desktop15/desktop15.css
@@ -201,6 +201,7 @@ body{
 .pics{
     position: relative;
     top: 5vh;
+    top: 2.8vw;
     display: flex;
 }
 
