--- a/desktop15/stylefooter.css
+++ b/desktop15/stylefooter.css
@@ -2,7 +2,7 @@
     background-color: #cfff69;
     height: 310px;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 50px;
   }
   #foot_1 {
